--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://stats/ally_stats/rayyan.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://stats/ally_stats/", "res://assets/sprites/", "res://actions/enemy_actions/attack_actions/", "res://actions/ally_actions/", "res://actions/ally_actions/magic_actions/", "res://actions/ally_actions/magic_actions/healing_magic_actions/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/music/main_menu.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://stats/ally_stats/", "res://assets/sprites/", "res://assets/music/", "res://actions/enemy_actions/attack_actions/", "res://actions/ally_actions/", "res://actions/ally_actions/magic_actions/", "res://actions/ally_actions/magic_actions/healing_magic_actions/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,15 +28,15 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray()
 current_scene=""
 center_split_offset=-344
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://base_resource_classes/ally_action.gd", "res://ally_battler/ally_attacking_decider.gd", "res://base_resource_classes/ally_attack_action.gd", "res://ally_battler/ally_battler.gd", "res://base_resource_classes/ally_defend_action.gd", "res://base_resource_classes/ally_healing_magic_action.gd", "res://base_resource_classes/ally_item_action.gd", "res://base_resource_classes/ally_magic_action.gd", "res://base_resource_classes/ally_offensive_magic_action.gd", "res://base_resource_classes/ally_stats.gd", "res://autoloads/audio.gd", "res://battle/battle.gd", "res://abstract_battler/battler.gd", "res://base_resource_classes/battle_data.gd", "res://battle/debuging_circle.gd", "res://ally_battler/defending_decider.gd", "res://base_resource_classes/enemy_action.gd", "res://base_resource_classes/enemy_attack_action.gd", "res://enemy_battler/enemy_battler.gd", "res://base_resource_classes/enemy_defend_action.gd", "res://base_resource_classes/enemy_stats.gd", "res://autoloads/global.gd", "res://ally_battler/item_decider.gd", "res://ally_battler/magic_decider.gd", "res://autoloads/screen_fade.gd", "res://autoloads/signal_bus.gd", "res://UI/title_screen.gd"]
-selected_script="res://ally_battler/ally_battler.gd"
-open_help=["AnimationPlayer", "CircleShape2D", "Curve2D", "Node2D", "NodePath"]
+selected_script="res://battle/battle.gd"
+open_help=["AnimatedSprite2D", "AnimationPlayer", "CircleShape2D", "Curve2D", "Node2D", "NodePath", "PackedScene", "Sprite2D"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.07142
@@ -52,8 +52,8 @@ text_shader_zoom_factor=1.0
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=true
-log_filter_3=true
+log_filter_1=false
+log_filter_3=false
 log_filter_4=true
 collapse=false
 show_search=true
