Added cursor and tweaked some animation timings.

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,20 +17,19 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/music/main_menu.mp3")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://stats/ally_stats/", "res://assets/sprites/", "res://assets/music/", "res://actions/enemy_actions/attack_actions/", "res://actions/ally_actions/", "res://actions/ally_actions/magic_actions/", "res://actions/ally_actions/magic_actions/healing_magic_actions/")
+dock_filesystem_selected_paths=PackedStringArray("res://battle_data/demo.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://stats/ally_stats/", "res://battle_data/", "res://assets/sprites/", "res://assets/music/", "res://actions/enemy_actions/attack_actions/", "res://actions/ally_actions/", "res://actions/ally_actions/magic_actions/", "res://actions/ally_actions/magic_actions/healing_magic_actions/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
+open_scenes=PackedStringArray("res://battle/battle.tscn", "res://ally_battler/ally_battler.tscn", "res://enemy_battler/enemy_battler.tscn")
+current_scene="res://battle/battle.tscn"
 center_split_offset=-344
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
