Added healing items.

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -17,11 +17,23 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://ally_battler/ally_battler.gd"
 }, {
+"base": &"AllyItemAction",
+"class": &"AllyCuringItemAction",
+"icon": "",
+"language": &"GDScript",
+"path": "res://base_resource_classes/ally_curing_item_action.gd"
+}, {
 "base": &"AllyAction",
 "class": &"AllyDefendAction",
 "icon": "",
 "language": &"GDScript",
 "path": "res://base_resource_classes/ally_defend_action.gd"
+}, {
+"base": &"AllyItemAction",
+"class": &"AllyHealingItemAction",
+"icon": "",
+"language": &"GDScript",
+"path": "res://base_resource_classes/ally_healing_item_action.gd"
 }, {
 "base": &"AllyMagicAction",
 "class": &"AllyHealingMagicAction",
@@ -94,4 +106,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://base_resource_classes/enemy_stats.gd"
+}, {
+"base": &"Resource",
+"class": &"StatusEffect",
+"icon": "",
+"language": &"GDScript",
+"path": "res://base_resource_classes/status_effect.gd"
 }])
