Working on adding status effects.

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -23,6 +23,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://base_resource_classes/ally_curing_item_action.gd"
 }, {
+"base": &"AllyMagicAction",
+"class": &"AllyCurseMagicAction",
+"icon": "",
+"language": &"GDScript",
+"path": "res://base_resource_classes/ally_curse_magic_action.gd"
+}, {
 "base": &"AllyAction",
 "class": &"AllyDefendAction",
 "icon": "",
@@ -76,6 +82,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://abstract_battler/battler.gd"
+}, {
+"base": &"StatusEffect",
+"class": &"DisablingStatusEffect",
+"icon": "",
+"language": &"GDScript",
+"path": "res://base_resource_classes/disabling_status_effect.gd"
 }, {
 "base": &"Resource",
 "class": &"EnemyAction",
