--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="open_jrpg_1.4.1/index.html"
+export_path="../../Desktop/open_jrpg_1.5.0/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
