--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,26 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://status_effects/disabling/", "res://stats/ally_stats/", "res://assets/SFX/", "res://assets/battle_backgrounds/", "res://actions/ally_actions/", "res://actions/ally_actions/magic_actions/curse_magic_actions/")
+dock_filesystem_selected_paths=PackedStringArray("res://stats/enemy_stats/dark_knight.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://stats/", "res://stats/enemy_stats/", "res://assets/", "res://assets/sprites/", "res://assets/SFX/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://battle/battle.tscn", "res://UI/title_screen.tscn")
-current_scene="res://UI/title_screen.tscn"
+open_scenes=PackedStringArray()
+current_scene=""
 center_split_offset=-344
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://base_resource_classes/ally_action.gd", "res://ally_battler/ally_attacking_decider.gd", "res://base_resource_classes/ally_attack_action.gd", "res://ally_battler/ally_battler.gd", "res://base_resource_classes/ally_curing_item_action.gd", "res://base_resource_classes/ally_curse_magic_action.gd", "res://base_resource_classes/ally_defend_action.gd", "res://base_resource_classes/ally_healing_item_action.gd", "res://base_resource_classes/ally_healing_magic_action.gd", "res://base_resource_classes/ally_item_action.gd", "res://base_resource_classes/ally_magic_action.gd", "res://base_resource_classes/ally_offensive_magic_action.gd", "res://base_resource_classes/ally_stats.gd", "res://autoloads/audio.gd", "res://battle/battle.gd", "res://abstract_battler/battler.gd", "res://base_resource_classes/battle_data.gd", "res://battle/debuging_circle.gd", "res://ally_battler/defending_decider.gd", "res://base_resource_classes/disabling_status_effect.gd", "res://base_resource_classes/enemy_action.gd", "res://base_resource_classes/enemy_attack_action.gd", "res://enemy_battler/enemy_battler.gd", "res://base_resource_classes/enemy_defend_action.gd", "res://base_resource_classes/enemy_stats.gd", "res://autoloads/global.gd", "res://UI/intro_screen.gd", "res://ally_battler/item_decider.gd", "res://ally_battler/magic_decider.gd", "res://autoloads/screen_fade.gd", "res://autoloads/signal_bus.gd", "res://base_resource_classes/status_effect.gd", "res://UI/title_screen.gd"]
-selected_script="res://UI/title_screen.gd"
-open_help=[]
+open_scripts=["res://base_resource_classes/ally_action.gd", "res://ally_battler/ally_attacking_decider.gd", "res://base_resource_classes/ally_attack_action.gd", "res://ally_battler/ally_battler.gd", "res://base_resource_classes/ally_curing_item_action.gd", "res://base_resource_classes/ally_curse_magic_action.gd", "res://base_resource_classes/ally_defend_action.gd", "res://base_resource_classes/ally_healing_item_action.gd", "res://base_resource_classes/ally_healing_magic_action.gd", "res://base_resource_classes/ally_item_action.gd", "res://base_resource_classes/ally_magic_action.gd", "res://base_resource_classes/ally_offensive_magic_action.gd", "res://base_resource_classes/ally_stats.gd", "res://autoloads/audio.gd", "res://battle/battle.gd", "res://abstract_battler/battler.gd", "res://base_resource_classes/battle_data.gd", "res://battle/debuging_circle.gd", "res://ally_battler/defending_decider.gd", "res://base_resource_classes/disabling_status_effect.gd", "res://base_resource_classes/enemy_action.gd", "res://base_resource_classes/enemy_attack_action.gd", "res://enemy_battler/enemy_battler.gd", "res://base_resource_classes/enemy_defend_action.gd", "res://base_resource_classes/enemy_stats.gd", "res://export_presets.cfg", "res://autoloads/global.gd", "res://UI/intro_screen.gd", "res://ally_battler/item_decider.gd", "res://ally_battler/magic_decider.gd", "res://autoloads/screen_fade.gd", "res://autoloads/signal_bus.gd", "res://base_resource_classes/status_effect.gd", "res://UI/title_screen.gd"]
+selected_script="res://abstract_battler/battler.gd"
+open_help=["Node"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=0.999992
