--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 55,
-"folded_lines": Array[int]([]),
+"column": 12,
+"folded_lines": Array[int]([17, 25]),
 "h_scroll_position": 0,
-"row": 199,
-"scroll_position": 192.0,
+"row": 167,
+"scroll_position": 144.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
-"folded_lines": Array[int]([20]),
+"column": 13,
+"folded_lines": Array[int]([19]),
 "h_scroll_position": 0,
-"row": 72,
-"scroll_position": 0.0,
+"row": 162,
+"scroll_position": 151.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -34,8 +34,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 86,
-"scroll_position": 68.0,
+"row": 96,
+"scroll_position": 83.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 9.0,
+"row": 141,
+"scroll_position": 131.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -365,10 +365,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -379,11 +379,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 56,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
+"row": 55,
+"scroll_position": 41.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -474,4 +474,18 @@ state={
 "selection_to_column": 24,
 "selection_to_line": 3,
 "syntax_highlighter": "GDScript"
+}
+
+[res://export_presets.cfg]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 79.0,
+"selection": false,
+"syntax_highlighter": "Plain Text"
 }
